--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -7,7 +7,7 @@
 <meta name="description" content="Plantilla de página web moderna con CSS embellecedor: gradientes, glassmorphism y animaciones." />
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="Untitled-1.css">
-<img src="Imagen de WhatsApp 2025-09-19 a las 15.51.47_d29d931f.jpg" alt="20" width="20">
+<img src="imagenes/Imagen de WhatsApp 2025-09-19 a las 15.51.47_d29d931f.jpg" alt="20" width="20">
 </head>
 <body>
 <div class="container">
@@ -15,12 +15,13 @@
 <div class="brand">
 <div class="logo">
     <center>
-      <img src="Imagen de WhatsApp 2025-09-19 a las 15.51.47_d29d931f.jpg" alt="1024" width="1024">
+      <img src="imagenes/Imagen de WhatsApp 2025-09-19 a las 15.51.47_d29d931f.jpg" alt="1024" width="1024">
     </center>
 </div>
 <div>
     <marquee>
 <h1>WolfWear</h1>
+<h2>“Con estilo y poder, pantalones pa’ lucir y vencer.”</h2>
     </marquee>
     
 <div style="font-size:12px;color:var(--muted)"></div>
@@ -42,10 +43,8 @@ Fidelización del cliente: construir una comunidad que se identifique con el esp
 </center>
 <center>
 <h2>productos</h2>
-<img src="Imagen de WhatsApp 2025-06-16 a las 17.48.55_919d9db0.jpg" alt="500" width="500">
-<img src="Imagen de WhatsApp 2025-08-28 a las 20.01.15_f70e1c7e.jpg" alt="500" width="500">
+<img src="imagenes/Imagen de WhatsApp 2025-06-16 a las 17.48.55_919d9db0.jpg" alt="500" width="500">
+<img src="imagenes/Imagen de WhatsApp 2025-08-28 a las 20.01.15_f70e1c7e.jpg" alt="500" width="500">
 </center>
-
 </body>
-
 </html>
